# labelElli

./: .gitignore  CMakeLists.txt  Labeler.cpp  Labeler.hpp  main.cpp
